# nrds-client

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  install.yml  launchApp.sh  package-lock.json  package.json  pyproject.toml  run.sh  singularity_tethys_ngiab.def
.github/security/: .grype.yaml
.github/workflows/: build_and_push_dev_image.yml  build_and_push_prod_image.yml  singularity_image.yml
reactapp/: App.js  App.scss  App.test.js  index.js  wdyr.js
reactapp/config/: development.env  webpack.config.js
reactapp/config/tests/: test.env
reactapp/config/tests/mocks/: handlers.js
reactapp/features/DataStream/components/: MenuList.js  Modals.js  SelectComponent.js
reactapp/features/DataStream/components/forecast/: DataMenu.js  FeatureInformation.js  ForecastHeader.js  Plot.js  TimeSlider.css  TimeSlider.js  TimeseriesCard.js  cacheHandler.js  cacheTable.js  dataMenu.js  variablesMenu.js
reactapp/features/DataStream/components/map/: LayersControl.js  MapLayers.js  Mapg.js  Popup.js  SearchBar.js
reactapp/features/DataStream/components/menus/: CacheMenu.js  ForecastMenu.js  LayersMenu.js  MainMenu.js
reactapp/features/DataStream/components/styles/: Styles.js
reactapp/features/DataStream/lib/: data.js  duckdbClient.js  layers.js  opfsCache.js  queryData.js  s3Utils.js  utils.js
reactapp/features/DataStream/store/: CacheTables.js  Datastream.js  Layers.js  Timeseries.js  s3Store.js
reactapp/features/DataStream/views/: DatastreamView.js
reactapp/features/Tethys/components/: Styles.js
reactapp/features/Tethys/components/buttons/: HeaderButton.js  NavButton.js
reactapp/features/Tethys/components/error/: Error.js  ErrorBoundary.js  NotFound.js  (+1 more)
reactapp/features/Tethys/services/: utilities.js
reactapp/hooks/: useTheme.js
salt/: patches.sls  top.sls
scripts/: Dockerfile  con.Dockerfile  conus.Dockerfile  gkg2parquet.Dockerfile
scripts/gpkg2parquet/: gpkg2parquet.sh
scripts/nc2parquet/: nc2parquet.py  utils.py
singularity/: run.sh
tests/: .env
tethysapp/nrds/: app.py  controllers.py  data_utils.py
tethysapp/nrds/templates/nrds/: index.html
tethysapp/nrds/tests/: tests.py
(+9 files in other folders)
